--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-router": "^7.6.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
